<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background"
    android:orientation="vertical">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etHeight"
        android:inputType="numberDecimal"
        android:hint="@string/hint_height"
        android:layout_marginTop="45dp"
        android:layout_below="@+id/ivInfo"
        android:layout_alignLeft="@+id/etWeight"
        android:layout_alignStart="@+id/etWeight" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etWeight"
        android:inputType="numberDecimal"
        android:hint="@string/hint_weight"
        android:layout_below="@+id/etHeight"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        />

    <ImageView
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:id="@+id/ivInfo"
        android:soundEffectsEnabled="true"
        android:src="@drawable/info"
        android:contentDescription="@null"
        android:layout_marginTop="25dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="35dp"
        android:layout_marginEnd="35dp"
        />


    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/rgSelect">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:id="@+id/rbMetric"
            android:text="@string/metric"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:id="@+id/rbStandard"
            android:text="@string/standard"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            />

        </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/bCalculate"
        android:textSize="35sp"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
